--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@ body {
     font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
 }
+body {
+    background-image: url("https://img.pixers.pics/pho_wat(s3:700/FO/84/69/88/32/700_FO84698832_03ac9523aa74ac478155ec9b03f07dc0.jpg,700,497,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,480,447,jpg)/almohadas-largas-galaxia-espiral-ilustracion-de-la-via-lactea.jpg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
 a {
     text-decoration: none;
     cursor: pointer;
@@ -67,6 +75,7 @@ main .main-input-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 main .main-input input {
     width: 450px;
